# neat-mario

./: .gitignore  custom.dic  pyproject.toml  todo
neat-mario/blackjack/: config
neatlab/: __main__.py  showcase.py  train.py  visualize.py
neatlab/experiences/: acrobot.py  blackjack.py  config-acrobot  config-blackjack  experience.py  xor.py
neatlab/gymnasium_env/: acrobot.py
